<resources>
    <string name="app_name">club</string>
    <string name="wellcomText">Введите логин пароль и адрес сервера</string>
    <string name="conncectButton">Connect</string>
    <string name="userText">postgres</string>
    <string name="passText">000111</string>
    <string name="userTextView">user</string>
    <string name="passTextView">password</string>

    <string-array name="host_array">
        <item>192.168.1.13</item>
        <item>192.168.122.20</item>
        <item>localhost</item>
        <item>192.168.1.146</item>

    </string-array>

    <string name="title_activity_work">WorkActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit_view">Редактировать</string>
    <string name="action_del_view">Удалить</string>
    <string name="action_settings_view">Настройки</string>
    <string name="clientInfo">Карточка клиента: </string>
    <string name="nameView">Имя</string>
    <string name="nameView2">Имя</string>
    <string name="phone">Телефон</string>
    <string name="editButtontext">Сохранить</string>
    <string name="activity_clientview.xml">Отменить</string>


    <string name="client_list_frag">Фрагмент списка клиентов</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
